--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ dashscope
 imageio-ffmpeg
 flash_attn
 gradio>=5.0.0
-numpy==1.24.4
+numpy==1.26.4
 boto3
 decord
 wandb
@@ -31,3 +31,4 @@ matplotlib
 sentencepiece
 pydantic
 scikit-image
+torchao==0.15.0
